# llm-flow-engine

./: .gitignore  CLEANUP_SUMMARY.md  DEVELOPMENT.md  GITHUB_ACTIONS_FIX.md  Makefile  README.md  demo.py  demo_example.py  demo_qa.yaml  package_demo.py  prd.md  publish.sh  pyproject.toml  requirements.txt  test_content_creation.py  validate_project.py  validate_project_win.py
.github/workflows/: ci.yml  publish.yml  test-cross-platform.yml
docs/: README_zh.md
examples/: demo_example.py  demo_qa.yaml
llm_flow_engine/: __init__.py  builtin_functions.py  dag_workflow.py  dsl_loader.py  executor.py  executor_result.py  flow_engine.py  model_config.py  utils.py  work_flow_engine.py  workflow.py
llm_flow_engine/functions/: readme.md
scripts/: README.md  build.sh  clean.sh  publish.sh  test_publish.sh  version.sh
